[project]
name = "bw-mcp-server"
version = "0.1.0"
description = "Bandwidth MCP Server"
authors = [
    {name = "Bandwidth", email = "dx@bandwidth.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv~=1.1.0",
    "httpx~=0.28.0",
    "fastmcp~=2.11.0",
    "pyyaml~=6.0.0"
]

[project.scripts]
start = "app:main"
